Добавлены разрешения для всех моделей

--- a/autocatalogue/docker-compose.yml
+++ b/autocatalogue/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - database:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=mediasoft
       - POSTGRES_USER=mediasoft
@@ -21,4 +21,8 @@ services:
       - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - db
 
+volumes:
+  database:
